# clean-architecture-rust

./: .gitignore  Cargo.toml  Makefile.toml  README.md
lib/animal_facts_domain/: Cargo.toml
lib/animal_facts_ports/: Cargo.toml
lib/animal_facts_ports/src/: cat_facts.rs  dog_facts.rs  lib.rs
lib/animal_facts_repositories/: Cargo.toml
lib/animal_facts_repositories/src/: lib.rs
lib/animal_facts_repositories/src/http/: cat_facts_repository.rs  mappers.rs  mod.rs
lib/animal_facts_repositories/src/postgres/: dog_facts_repository.rs  mappers.rs  mod.rs  models.rs
lib/domain/: Cargo.toml
lib/domain/src/: lib.rs
lib/domain/src/comment/: comment.rs  comment_client.rs  mod.rs
lib/domain/src/product/: mod.rs  product.rs  product_repository.rs
lib/infra/: Cargo.toml
lib/infra/src/: lib.rs
lib/infra/src/comment/http/: comment_dto.rs  comment_http_client.rs  comment_mapper.rs  mod.rs
lib/infra/src/http/: http_connection.rs
lib/infra/src/postgres/: db_connection.rs
lib/infra/src/product/postgres/: mod.rs  product_db_dto.rs  product_db_mapper.rs  product_db_repository.rs  product_schema.rs
scripts/: init_pg.sh  linux-coverage-helper.sh  windows-coverage-helper.ps1
src/adapters/api/cat_facts/: cat_facts_controllers.rs  cat_facts_mappers.rs
src/adapters/api/dog_facts/: dog_facts_controllers.rs  dog_facts_mappers.rs
src/adapters/api/shared/: app_state.rs  error_presenter.rs
src/adapters/spi/db/: db_dog_facts_repository.rs  db_mappers.rs
src/adapters/spi/http/: http_cat_facts_repository.rs  http_mappers.rs
src/application/usecases/: get_all_cat_facts_usecase.rs  get_all_dog_facts_usecase.rs  get_one_dog_fact_by_id_usecase.rs  get_one_random_cat_fact_usecase.rs
src/application/utils/: error_handling_utils.rs
src/infrastructure/: mod.rs
tests/integration_tests/: test_cat_facts.rs  test_dog_facts.rs
tests/integration_tests/fixtures/: fixtures_run.rs
tests/utils/: test_context.rs  utils_setup.rs
