[workspace]
members = ["bin/*", "lib/*"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
animal_facts_ports = { path = ".lib/animal_facts_ports" }
animal_facts_domain = { path = ".lib/animal_facts_domain" }
animal_facts_repositories = { path = ".lib/animal_facts_repositories" }
actix-web = { version = "4.2.1", features = ["rustls"] }
actix-rt = "~2.7"
actix-http = "3.2.2"
log = "~0.4.0"
env_logger = "~0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
async-trait = "~0.1"
diesel = { version = "~1.4", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "~1.4"
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "~1.0"
derive_more = "~0.99"
reqwest={version="0.11", features = ["json"]}
