[workspace]
members = ["bin/*", "lib/*"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
animal_facts_ports = { path = ".lib/animal_facts_ports" }
animal_facts_domain = { path = ".lib/animal_facts_domain" }
animal_facts_repositories = { path = ".lib/animal_facts_repositories" }
actix-web = { version = "~4.10", features = ["rustls"] }
actix-rt = "~2.10"
actix-http = "~3.10"
log = "~0.4.0"
env_logger = "~0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
async-trait = "~0.1"
diesel = { version = "2.2.9", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = { version = "1.21.2", features = ["full"] }
thiserror = "~2.0"
derive_more = "~2.0"
reqwest={version="~0.12", features = ["json"]}
mockall = "~0.13"
uuid = { version = "~1.16", features = ["serde", "v4"] }

[workspace.dev-dependencies]
uuid = { version = "~1.16", features = ["serde", "v4"] }
mockall = "~0.13"
