[package]
name = "domain"
description = "Domain layer"
version = "1.0.0"
edition = "2024"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
log = "~0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
async-trait = "~0.1"

[dev-dependencies]
uuid = { version = "1.2.1", features = ["serde", "v4"] }
mockall = "0.13.1"
