[package]
name = "domain"
description = "Domain layer"
version = "1.0.0"
edition = "2024"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
mockall.workspace = true

[dev-dependencies]
uuid = { workspace = true, features = ["serde", "v4"] }
