[package]
name = "infra"
description = "Infrastructure layer"
version = "1.0.0"
edition = "2024"

[lib]
name = "infra"
path = "src/lib.rs"

[dependencies]
domain = { path = "../domain" }
log = "~0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
async-trait = "~0.1"
diesel = { version = "~1.4", features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = { version = "1.21.2", features = ["full"] }
reqwest={version="0.11", features = ["json"]}

[dev-dependencies]
uuid = { version = "1.2.1", features = ["serde", "v4"] }
mockall = "0.13.1"
