[package]
name = "infra"
description = "Infrastructure layer"
version = "1.0.0"
edition = "2024"

[lib]
name = "infra"
path = "src/lib.rs"

[dependencies]
domain = { path = "../domain" }
log.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
diesel = { workspace = true, features = ["postgres", "r2d2"] }
dotenv.workspace = true
r2d2.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest={ workspace = true, features = ["json"] }

[dev-dependencies]
uuid = { workspace = true, features = ["serde", "v4"] }
mockall.workspace = true
